// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notes should invoke add note on clicking add note button 1`] = `
<div>
  <div
    aria-label="notes-app"
    class="css-197p22x"
  >
    <div
      aria-label="notes-toolbar"
      class="css-v6owqk"
    >
      <div
        class="css-1uprcb7"
      >
        <button
          aria-label="Toggle Sidebar"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="20"
          >
            <rect
              height="18"
              rx="4"
              ry="4"
              width="18"
              x="3"
              y="3"
            />
            <line
              x1="9"
              x2="9"
              y1="3"
              y2="21"
            />
          </svg>
        </button>
        <div
          class="css-zg1vud"
        >
          <p
            class="chakra-text css-118q1xs"
          >
            All iCloud
          </p>
          <p
            class="chakra-text css-ye3u0x"
          >
            3
             
            notes
          </p>
        </div>
      </div>
      <div
        class="css-1nrdgyt"
      >
        <button
          aria-label="Options"
          class="css-oup2gn"
        >
          ⋯
        </button>
        <button
          aria-label="New Note (⌘N)"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="css-181we23"
        />
        <button
          aria-label="Format"
          class="css-oup2gn"
        >
          <p
            class="chakra-text css-1wvbq5j"
          >
            Aa
          </p>
        </button>
        <button
          aria-label="Checklist"
          class="css-oup2gn"
        >
          ☑
        </button>
        <button
          aria-label="Table"
          class="css-oup2gn"
        >
          ▦
        </button>
        <button
          aria-label="Attachment"
          class="css-oup2gn"
        >
          📎
        </button>
        <button
          aria-label="Drawing"
          class="css-oup2gn"
        >
          🎨
        </button>
      </div>
      <div
        class="css-1n4ipxh"
      >
        <button
          aria-label="Pin"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
          >
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="22"
            />
            <path
              d="M5 17h14v-1.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3v4.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V17z"
            />
          </svg>
        </button>
        <button
          aria-label="Share"
          class="css-oup2gn"
        >
          ↗
        </button>
        <button
          aria-label="Delete"
          class="css-5bhbzo"
        >
          🗑️
        </button>
        <div
          class="css-115h0kt"
        >
          <div
            class="css-19ly582"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-w7iz82"
            placeholder="Search"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="css-1y2fbyv"
    >
      <div
        style="overflow: hidden; height: 100%; width: 260px; opacity: 1;"
      >
        <div
          class="css-1v99mn1"
        >
          <div
            class="css-12apka9"
          >
            <div
              class="css-g89h0y"
            >
              <p
                class="chakra-text css-1bwgj22"
              >
                Pinned
              </p>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-note-2"
                  class="css-19d4tni"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      Grocery List 🛒
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/19/25
                      </p>
                      <p
                        class="chakra-text css-1mt2ljt"
                      >
                        Milk, Eggs, Bread...
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1fhgjcy"
            >
              <p
                class="chakra-text css-1bwgj22"
              >
                April
              </p>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-1"
                  class="css-14qp5h5"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      New Note
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/20/25
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-note-1"
                  class="css-19d4tni"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      Teaching Holistic Health 🧘‍♀️
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/20/25
                      </p>
                      <p
                        class="chakra-text css-1mt2ljt"
                      >
                        Brainstorm for first in-class session...
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-akytgu"
      >
        <div
          class="css-1cyd93v"
        >
          <div
            class="css-1ug6a81"
          >
            <div
              aria-label="note-editor"
              class="notes-editor css-0"
              contenteditable="true"
              data-placeholder="Start writing…"
            >
              <div>
                New Note
              </div>
              <div />
            </div>
          </div>
          <div
            class="css-166fhkz"
          >
            <p
              class="chakra-text css-alcd66"
            >
              4/20/2025
               
              at
               
              10:00 AM
            </p>
            <p
              class="chakra-text css-alcd66"
            >
              2
               
              words
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notes should invoke delete note on clicking delete note button 1`] = `
<div>
  <div
    aria-label="notes-app"
    class="css-197p22x"
  >
    <div
      aria-label="notes-toolbar"
      class="css-v6owqk"
    >
      <div
        class="css-1uprcb7"
      >
        <button
          aria-label="Toggle Sidebar"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="20"
          >
            <rect
              height="18"
              rx="4"
              ry="4"
              width="18"
              x="3"
              y="3"
            />
            <line
              x1="9"
              x2="9"
              y1="3"
              y2="21"
            />
          </svg>
        </button>
        <div
          class="css-zg1vud"
        >
          <p
            class="chakra-text css-118q1xs"
          >
            All iCloud
          </p>
          <p
            class="chakra-text css-ye3u0x"
          >
            2
             
            notes
          </p>
        </div>
      </div>
      <div
        class="css-1nrdgyt"
      >
        <button
          aria-label="Options"
          class="css-oup2gn"
        >
          ⋯
        </button>
        <button
          aria-label="New Note (⌘N)"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="css-181we23"
        />
        <button
          aria-label="Format"
          class="css-oup2gn"
        >
          <p
            class="chakra-text css-1wvbq5j"
          >
            Aa
          </p>
        </button>
        <button
          aria-label="Checklist"
          class="css-oup2gn"
        >
          ☑
        </button>
        <button
          aria-label="Table"
          class="css-oup2gn"
        >
          ▦
        </button>
        <button
          aria-label="Attachment"
          class="css-oup2gn"
        >
          📎
        </button>
        <button
          aria-label="Drawing"
          class="css-oup2gn"
        >
          🎨
        </button>
      </div>
      <div
        class="css-1n4ipxh"
      >
        <button
          aria-label="Unpin"
          class="css-1yksoe3"
        >
          <svg
            fill="currentColor"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
          >
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="22"
            />
            <path
              d="M5 17h14v-1.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3v4.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V17z"
            />
          </svg>
        </button>
        <button
          aria-label="Share"
          class="css-oup2gn"
        >
          ↗
        </button>
        <button
          aria-label="Delete"
          class="css-5bhbzo"
        >
          🗑️
        </button>
        <div
          class="css-115h0kt"
        >
          <div
            class="css-19ly582"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-w7iz82"
            placeholder="Search"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="css-1y2fbyv"
    >
      <div
        style="overflow: hidden; height: 100%; width: 260px; opacity: 1;"
      >
        <div
          class="css-1v99mn1"
        >
          <div
            class="css-12apka9"
          >
            <div
              class="css-g89h0y"
            >
              <p
                class="chakra-text css-1bwgj22"
              >
                Pinned
              </p>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-note-2"
                  class="css-14qp5h5"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      Grocery List 🛒
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/19/25
                      </p>
                      <p
                        class="chakra-text css-1mt2ljt"
                      >
                        Milk, Eggs, Bread...
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1fhgjcy"
            >
              <p
                class="chakra-text css-1bwgj22"
              >
                April
              </p>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-note-1"
                  class="css-19d4tni"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      Teaching Holistic Health 🧘‍♀️
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/20/25
                      </p>
                      <p
                        class="chakra-text css-1mt2ljt"
                      >
                        Brainstorm for first in-class session...
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-akytgu"
      >
        <div
          class="css-1cyd93v"
        >
          <div
            class="css-1ug6a81"
          >
            <div
              aria-label="note-editor"
              class="notes-editor css-0"
              contenteditable="true"
              data-placeholder="Start writing…"
            >
              <div>
                Grocery List 🛒
              </div>
            </div>
          </div>
          <div
            class="css-166fhkz"
          >
            <p
              class="chakra-text css-alcd66"
            >
              4/19/2025
               
              at
               
              03:30 PM
            </p>
            <p
              class="chakra-text css-alcd66"
            >
              3
               
              words
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notes should render correctly to match snapshot 1`] = `
<div>
  <div
    aria-label="notes-app"
    class="css-197p22x"
  >
    <div
      aria-label="notes-toolbar"
      class="css-v6owqk"
    >
      <div
        class="css-1uprcb7"
      >
        <button
          aria-label="Toggle Sidebar"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="20"
          >
            <rect
              height="18"
              rx="4"
              ry="4"
              width="18"
              x="3"
              y="3"
            />
            <line
              x1="9"
              x2="9"
              y1="3"
              y2="21"
            />
          </svg>
        </button>
        <div
          class="css-zg1vud"
        >
          <p
            class="chakra-text css-118q1xs"
          >
            All iCloud
          </p>
          <p
            class="chakra-text css-ye3u0x"
          >
            2
             
            notes
          </p>
        </div>
      </div>
      <div
        class="css-1nrdgyt"
      >
        <button
          aria-label="Options"
          class="css-oup2gn"
        >
          ⋯
        </button>
        <button
          aria-label="New Note (⌘N)"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="css-181we23"
        />
        <button
          aria-label="Format"
          class="css-oup2gn"
        >
          <p
            class="chakra-text css-1wvbq5j"
          >
            Aa
          </p>
        </button>
        <button
          aria-label="Checklist"
          class="css-oup2gn"
        >
          ☑
        </button>
        <button
          aria-label="Table"
          class="css-oup2gn"
        >
          ▦
        </button>
        <button
          aria-label="Attachment"
          class="css-oup2gn"
        >
          📎
        </button>
        <button
          aria-label="Drawing"
          class="css-oup2gn"
        >
          🎨
        </button>
      </div>
      <div
        class="css-1n4ipxh"
      >
        <button
          aria-label="Unpin"
          class="css-1yksoe3"
        >
          <svg
            fill="currentColor"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
          >
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="22"
            />
            <path
              d="M5 17h14v-1.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3v4.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V17z"
            />
          </svg>
        </button>
        <button
          aria-label="Share"
          class="css-oup2gn"
        >
          ↗
        </button>
        <button
          aria-label="Delete"
          class="css-5bhbzo"
        >
          🗑️
        </button>
        <div
          class="css-115h0kt"
        >
          <div
            class="css-19ly582"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-w7iz82"
            placeholder="Search"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="css-1y2fbyv"
    >
      <div
        style="overflow: hidden; height: 100%; width: 260px; opacity: 1;"
      >
        <div
          class="css-1v99mn1"
        >
          <div
            class="css-12apka9"
          >
            <div
              class="css-g89h0y"
            >
              <p
                class="chakra-text css-1bwgj22"
              >
                Pinned
              </p>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-note-2"
                  class="css-14qp5h5"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      Grocery List 🛒
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/19/25
                      </p>
                      <p
                        class="chakra-text css-1mt2ljt"
                      >
                        Milk, Eggs, Bread...
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1fhgjcy"
            >
              <p
                class="chakra-text css-1bwgj22"
              >
                April
              </p>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-note-1"
                  class="css-19d4tni"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      Teaching Holistic Health 🧘‍♀️
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/20/25
                      </p>
                      <p
                        class="chakra-text css-1mt2ljt"
                      >
                        Brainstorm for first in-class session...
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-akytgu"
      >
        <div
          class="css-1cyd93v"
        >
          <div
            class="css-1ug6a81"
          >
            <div
              aria-label="note-editor"
              class="notes-editor css-0"
              contenteditable="true"
              data-placeholder="Start writing…"
            >
              <div>
                Grocery List 🛒
              </div>
            </div>
          </div>
          <div
            class="css-166fhkz"
          >
            <p
              class="chakra-text css-alcd66"
            >
              4/19/2025
               
              at
               
              03:30 PM
            </p>
            <p
              class="chakra-text css-alcd66"
            >
              3
               
              words
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notes should select and deselect on clicking on card 1`] = `
<div>
  <div
    aria-label="notes-app"
    class="css-197p22x"
  >
    <div
      aria-label="notes-toolbar"
      class="css-v6owqk"
    >
      <div
        class="css-1uprcb7"
      >
        <button
          aria-label="Toggle Sidebar"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="20"
          >
            <rect
              height="18"
              rx="4"
              ry="4"
              width="18"
              x="3"
              y="3"
            />
            <line
              x1="9"
              x2="9"
              y1="3"
              y2="21"
            />
          </svg>
        </button>
        <div
          class="css-zg1vud"
        >
          <p
            class="chakra-text css-118q1xs"
          >
            All iCloud
          </p>
          <p
            class="chakra-text css-ye3u0x"
          >
            2
             
            notes
          </p>
        </div>
      </div>
      <div
        class="css-1nrdgyt"
      >
        <button
          aria-label="Options"
          class="css-oup2gn"
        >
          ⋯
        </button>
        <button
          aria-label="New Note (⌘N)"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="20"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="css-181we23"
        />
        <button
          aria-label="Format"
          class="css-oup2gn"
        >
          <p
            class="chakra-text css-1wvbq5j"
          >
            Aa
          </p>
        </button>
        <button
          aria-label="Checklist"
          class="css-oup2gn"
        >
          ☑
        </button>
        <button
          aria-label="Table"
          class="css-oup2gn"
        >
          ▦
        </button>
        <button
          aria-label="Attachment"
          class="css-oup2gn"
        >
          📎
        </button>
        <button
          aria-label="Drawing"
          class="css-oup2gn"
        >
          🎨
        </button>
      </div>
      <div
        class="css-1n4ipxh"
      >
        <button
          aria-label="Pin"
          class="css-oup2gn"
        >
          <svg
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
          >
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="22"
            />
            <path
              d="M5 17h14v-1.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V6a3 3 0 0 0-3-3 3 3 0 0 0-3 3v4.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24V17z"
            />
          </svg>
        </button>
        <button
          aria-label="Share"
          class="css-oup2gn"
        >
          ↗
        </button>
        <button
          aria-label="Delete"
          class="css-5bhbzo"
        >
          🗑️
        </button>
        <div
          class="css-115h0kt"
        >
          <div
            class="css-19ly582"
          >
            <svg
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <line
                x1="21"
                x2="16.65"
                y1="21"
                y2="16.65"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-w7iz82"
            placeholder="Search"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="css-1y2fbyv"
    >
      <div
        style="overflow: hidden; height: 100%; width: 260px; opacity: 1;"
      >
        <div
          class="css-1v99mn1"
        >
          <div
            class="css-12apka9"
          >
            <div
              class="css-g89h0y"
            >
              <p
                class="chakra-text css-1bwgj22"
              >
                Pinned
              </p>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-note-2"
                  class="css-19d4tni"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      Grocery List 🛒
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/19/25
                      </p>
                      <p
                        class="chakra-text css-1mt2ljt"
                      >
                        Milk, Eggs, Bread...
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="css-1fhgjcy"
            >
              <p
                class="chakra-text css-1bwgj22"
              >
                April
              </p>
              <div
                class="css-dqb392"
              >
                <div
                  aria-label="note-card-note-1"
                  class="css-14qp5h5"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="css-1asxwwm"
                  >
                    <p
                      class="chakra-text css-kycatu"
                    >
                      Teaching Holistic Health 🧘‍♀️
                    </p>
                    <div
                      class="css-18gljgo"
                    >
                      <p
                        class="chakra-text css-ukge3m"
                      >
                        4/20/25
                      </p>
                      <p
                        class="chakra-text css-1mt2ljt"
                      >
                        Brainstorm for first in-class session...
                      </p>
                    </div>
                    <div
                      class="css-4i6g02"
                    >
                      <svg
                        fill="none"
                        height="12"
                        stroke="#8e8e93"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <path
                          d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-akytgu"
      >
        <div
          class="css-1cyd93v"
        >
          <div
            class="css-1ug6a81"
          >
            <div
              aria-label="note-editor"
              class="notes-editor css-0"
              contenteditable="true"
              data-placeholder="Start writing…"
            >
              
  
              <div>
                Teaching Holistic Health 🧘‍♀️
              </div>
              
  
              <div>
                <b>
                  Brainstorm for first in-class session
                </b>
              </div>
              
  
              <div
                style="margin-bottom: 16px;"
              >
                <span
                  class="hashtag"
                >
                  #school
                </span>
                 
                <span
                  class="hashtag"
                >
                  #kine210
                </span>
                 
                <span
                  class="hashtag"
                >
                  #practicum
                </span>
              </div>
              
  
              <div>
                <b>
                  Topic idea: Mind-Body Connection
                </b>
              </div>
              
  
              <div>
                Getting class assignments next week but we should expect third, fourth, or fifth-graders. "Mind-Body Connection" could be a cool angle; 
                <span
                  class="highlight-cyan"
                >
                  lots of different ways to approach it,
                </span>
                 it's 
                <span
                  class="highlight-cyan"
                >
                  accessible to everyone,
                </span>
                 
                <span
                  class="highlight-cyan"
                >
                  doesn't require any special gear,
                </span>
                 
                <span
                  class="highlight-cyan"
                >
                  non-competitive,
                </span>
                 etc. We could 
                <span
                  class="highlight-orange"
                >
                  start with a box breathing exercise
                </span>
                 to demonstrate the 
                <span
                  class="highlight-pink"
                >
                  connection between thinking, doing, and feeling
                </span>
                 and use it as a segue into a lesson about 
                <span
                  class="highlight-cyan"
                >
                  thinking of ourselves as interconnected systems.
                </span>
              </div>
              
  
              <div>
                
  
                <svg
                  height="250"
                  style="margin: 16px 0; max-width: 100%;"
                  viewBox="0 0 400 250"
                  width="400"
                >
                  
    
                  <rect
                    fill="none"
                    height="120"
                    stroke="#5ac8fa"
                    stroke-width="4"
                    width="120"
                    x="120"
                    y="50"
                  />
                  
    
                  <text
                    fill="#5ac8fa"
                    font-family="sans-serif"
                    font-size="18"
                    text-anchor="middle"
                    x="180"
                    y="105"
                  >
                    Box
                  </text>
                  
    
                  <text
                    fill="#5ac8fa"
                    font-family="sans-serif"
                    font-size="18"
                    text-anchor="middle"
                    x="180"
                    y="130"
                  >
                    Breathing
                  </text>
                  
    
    
                  <!-- Arrows -->
                  
    
                  <path
                    d="M120 40 L240 40"
                    stroke="#34c759"
                    stroke-width="3"
                  />
                  
    
                  <polygon
                    fill="#34c759"
                    points="240,40 230,35 230,45"
                  />
                  
    
                  <text
                    fill="#34c759"
                    font-family="sans-serif"
                    font-size="16"
                    text-anchor="middle"
                    x="180"
                    y="25"
                  >
                    1
                  </text>
                  
    
    
                  <path
                    d="M250 50 L250 170"
                    stroke="#ff3b30"
                    stroke-width="3"
                  />
                  
    
                  <polygon
                    fill="#ff3b30"
                    points="250,170 245,160 255,160"
                  />
                  
    
                  <text
                    fill="#ff3b30"
                    font-family="sans-serif"
                    font-size="16"
                    text-anchor="middle"
                    x="265"
                    y="115"
                  >
                    2
                  </text>
                  
    
    
                  <path
                    d="M240 180 L120 180"
                    stroke="#af52de"
                    stroke-width="3"
                  />
                  
    
                  <polygon
                    fill="#af52de"
                    points="120,180 130,175 130,185"
                  />
                  
    
                  <text
                    fill="#af52de"
                    font-family="sans-serif"
                    font-size="16"
                    text-anchor="middle"
                    x="180"
                    y="200"
                  >
                    3
                  </text>
                  
    
    
                  <path
                    d="M110 170 L110 50"
                    stroke="#ff2d55"
                    stroke-width="3"
                  />
                  
    
                  <polygon
                    fill="#ff2d55"
                    points="110,50 105,60 115,60"
                  />
                  
    
                  <text
                    fill="#ff2d55"
                    font-family="sans-serif"
                    font-size="16"
                    text-anchor="middle"
                    x="90"
                    y="115"
                  >
                    4
                  </text>
                  
    
    
                  <!-- Labels -->
                  
    
                  <text
                    fill="#000000"
                    font-family="sans-serif"
                    font-size="14"
                    x="290"
                    y="60"
                  >
                    1 Breathe in
                  </text>
                  
    
                  <text
                    fill="#000000"
                    font-family="sans-serif"
                    font-size="14"
                    x="290"
                    y="90"
                  >
                    2 Hold
                  </text>
                  
    
                  <text
                    fill="#000000"
                    font-family="sans-serif"
                    font-size="14"
                    x="290"
                    y="120"
                  >
                    3 Breathe out
                  </text>
                  
    
                  <text
                    fill="#000000"
                    font-family="sans-serif"
                    font-size="14"
                    x="290"
                    y="150"
                  >
                    4 Hold
                  </text>
                  
  
                </svg>
                
  
              </div>
              
  
              <div>
                Box breathing is a technique used to center and destress. Studies show controlled breathing has myriad physiological benefits—it soothes the autonomic nervous system, reduces cortisol, etc. This might be a little advanced but I think we should try to find a way to explain these systems in a way that will make sense to elementary school students.
              </div>
              <br />
              
  
              <div>
                I think it would be great to start off by having the whole class try box breathing together and then talking about how it made everyone feel. Starting with something calming that gets everyone on the same page seems like a good idea in case we get a class right after recess, too. This is effectively an introduction to
              </div>
              
  
            </div>
          </div>
          <div
            class="css-166fhkz"
          >
            <p
              class="chakra-text css-alcd66"
            >
              4/20/2025
               
              at
               
              10:00 AM
            </p>
            <p
              class="chakra-text css-alcd66"
            >
              219
               
              words
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
